# GM6020_CTL

./: CMakeLists.txt  README.md
can_mod/Inc/: can_mod.hpp  lubancat_can.h
cli_mod/Src/: main.cpp
drive_mod/Inc/: GM6020.h  motor.hpp
drive_mod/alth/: PID.hpp  data_trans.hpp
unit_test/: can_send.cpp  headers_test.cpp  tli_test.cpp
